--- a/sparkbasicexamples/build.gradle
+++ b/sparkbasicexamples/build.gradle
@@ -32,6 +32,8 @@ task fatJar(type: Jar) {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.2.1'
+    compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.2.1'
+
 
 
 }
